--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ log = { version = "0.4", features = ["std"] }
 chrono = "0.4"
 
 [workspace]
-members = ["examples/console"]
+members = ["examples/console", "examples/stdout"]
