--- a/.github/workflows/cargo-build.yml
+++ b/.github/workflows/cargo-build.yml
@@ -18,3 +18,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+
+  cargo-build-with-features:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose --features timezone
