--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ keywords = ["log", "logging", "filelog"]
 [dependencies]
 log = { version = "0.4", features = ["std"] }
 chrono = "0.4"
-chrono-tz = "0.10"
+chrono-tz = { version = "0.10", optional = true }
+
+[features]
+default = []
+timezone = ["chrono-tz"]
 
 [workspace]
 members = [
