--- a/examples/console/Cargo.toml
+++ b/examples/console/Cargo.toml
@@ -6,5 +6,4 @@ publish = false
 
 [dependencies]
 log = "0.4"
-ftail = { path = "../../../ftail" }
-chrono-tz = "0.10"
+ftail = { path = "../../../ftail", features = ["timezone"] }
